<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/common_count_down_timer" />

    <include layout="@layout/common_round" />

    <include layout="@layout/common_dragon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ac_ready_hands_make_text_select_tiles"
        android:textColor="#FFFF0000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <include layout="@layout/common_tiles_select" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ac_ready_hands_make_text_ready_hands" />

    <include layout="@layout/common_ready_hands_tiles" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom" >

        <Button
            android:id="@+id/btnReadyHandsMakeMainClear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector_smoke"
            android:text="@string/ac_ready_hands_make_btn_caption_clear" />

        <Button
            android:id="@+id/btnReadyHandsMakeMainOk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector_smoke"
            android:text="@string/ac_ready_hands_make_btn_caption_ok" />
    </LinearLayout>

</LinearLayout>