<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/ac_ready_hands_make_text_total_score"
            android:textSize="30sp" />

        <include layout="@layout/common_score" />
    </LinearLayout>

    <Button
        android:id="@+id/btnReadyHandsMakeFinishRestart"
        style="@style/ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ac_ready_hands_make_btn_caption_restart" />

    <Button
        android:id="@+id/btnReadyHandsMakeFinishGotoMenu"
        style="@style/ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ac_ready_hands_make_btn_caption_goto_menu" />
</LinearLayout>